Add the missing include of termios.h

The include unlocks the usage of the TIOCNOTTY constant.

Fixes: QTBUG-124642
Change-Id: Ife2475626ca61efe38ea7928a9b61a8aded1701d
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>